fixed the overlapping shadows of the buttons

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -251,7 +251,9 @@ body{
     width: 290px;
   }
   .grid {
-    gap: 10px;
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
   }
   
 }
